# rustchatroom

./: Cargo.toml  README.md
crates/p2p-cli/: Cargo.toml
crates/p2p-cli/src/: main.rs
crates/p2p-node/: Cargo.toml
crates/p2p-node/src/: hole_punch.rs  identity.rs  lib.rs  metrics.rs  net.rs  node.rs
deploy/docker/: Dockerfile  docker-compose.yml
deploy/k3d/: cluster.yaml  manifests.yaml
deploy/observability/: grafana-dashboard.json  prometheus.yml
docs/: experiments.md  research-summary.md
docs/artifacts/: 67-node-metrics-sample.csv
scripts/: collect-metrics.py  generate-plots.py  launch-k3d.sh  run-experiment.sh
