[package]
name = "p2p-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
p2p-node = { path = "../p2p-node" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
rand = { version = "0.8", features = ["std", "std_rng"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
