[package]
name = "p2p-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
p2p-node = { path = "../p2p-node" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "io-std", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libp2p = { version = "0.54", default-features = false, features = ["gossipsub"] }
