[package]
name = "p2p-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = "0.3"
hex = "0.4"
libp2p = { version = "0.54", default-features = false, features = ["autonat", "dns", "identify", "kad", "macros", "noise", "ping", "quic", "request-response", "tcp", "tokio", "yamux", "gossipsub", "serde"] }
prometheus = "0.13"
rand = { version = "0.8", features = ["std", "std_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
stun = "0.5"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hyper = { version = "0.14", features = ["full"] }

[dependencies.secp256k1]
version = "0.28"
features = ["rand-std", "serde"]

[features]
default = ["metrics"]
metrics = []

[dev-dependencies]
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
